<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.nenne.presentation.model.ClusteredItem" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E3E1E1"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

            <ImageView
                android:id="@+id/backBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:id="@+id/carwashShopName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:text="@{data.name}"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/tools_car_wash_shop_name_text" />

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/carwashShopImg"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginEnd="10dp"
                        app:autoAndSelfImg = "@{data.type}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:src="@drawable/self_text_img"/>

                    <TextView
                        android:id="@+id/detailInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:textColor="#00CCFF"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:setInfoTextByType = "@{data.type}"
                        app:layout_constraintBottom_toTopOf="@id/likeCount"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/carwashShopName"
                        tools:text="셀프" />

                    <TextView
                        android:id="@+id/likeCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_text_info"
                        android:drawablePadding="5dp"
                        android:text="단골 0명"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:drawableLeftCompat="@drawable/ic_baseline_thumb_up_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/detailInfo"
                        tools:drawableLeft="@drawable/ic_baseline_thumb_up_24"
                        tools:text="단골 111명" />

                    <TextView
                        android:id="@+id/reviewCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:background="@drawable/background_text_info"
                        android:drawablePadding="5dp"
                        android:text="평점 0(0)"
                        android:textColor="#000000"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        app:drawableLeftCompat="@drawable/ic_baseline_textsms_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/likeCount"
                        tools:drawableLeft="@drawable/ic_baseline_textsms_24"
                        tools:text="리뷰 4.6 (35)" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:id="@+id/priceOfWash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price_of_car_wash"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/noticeInfoPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:text="@string/notice_info"
                        android:textColor="#00CCFF"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/waterprice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        app:layout_constraintTop_toBottomOf="@id/priceOfWash">

                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:background="#00CCFF" />

                        <TextView
                            android:id="@+id/priceTxt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_weight="1"
                            android:text="@string/price_of_form"
                            android:textColor="#000000"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="10dp"
                            android:text="@string/ready"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:text="1000원 (1분)" />

                        <TextView
                            android:id="@+id/uptdateTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="15sp"
                            android:text="@string/no_update"
                            android:textStyle="bold"
                            tools:text="2시간 전" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/bubble"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center_vertical"
                        android:paddingTop="10dp"
                        android:paddingEnd="10dp"
                        app:layout_constraintTop_toBottomOf="@id/waterprice">

                        <View
                            android:layout_width="3dp"
                            android:layout_height="20dp"
                            android:background="#00CCFF" />

                        <TextView
                            android:id="@+id/priceTxtB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:layout_weight="1"
                            android:text="@string/price_of_bubble"
                            android:textColor="#000000"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/priceB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginRight="10dp"
                            android:text="@string/ready"
                            android:textColor="#000000"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:text="1000원 (1분)" />

                        <TextView
                            android:id="@+id/uptdateTimeB"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:text="@string/no_update"
                            tools:text="2시간 전" />
                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:textColor="#767774"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:layout_marginTop="20dp"
                        android:text="@string/noti_for_data"
                        app:layout_constraintTop_toBottomOf="@id/bubble"
                        android:paddingTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:drawableLeftCompat="@drawable/ic_baseline_battery_3_bar_24"
                        tools:drawableLeft="@drawable/ic_baseline_battery_3_bar_24"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp">

                    <TextView
                        android:id="@+id/textInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/review"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="#000000"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ready_review_system"
                        app:layout_constraintTop_toBottomOf="@id/textInfo"
                        android:paddingTop="20dp"
                        app:layout_constraintStart_toStartOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>