<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.nenne.presentation.map.MapFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/searchCardView"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearSearch"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/cardLine"
                    app:layout_constraintStart_toStartOf="parent"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/backImg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_baseline_arrow_back_ios_24" />

                    <TextView
                        android:id="@+id/searchTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/search_place_or_wash_area"
                        android:textAlignment="center"
                        android:textSize="18sp"
                        app:drawableLeftCompat="@drawable/ic_baseline_search_24"
                        android:layout_marginStart="5dp"/>
                </LinearLayout>

                <View
                    android:id="@+id/cardLine"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#D8CDCD"
                    app:layout_constraintTop_toBottomOf="@id/linearSearch" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="서울 송파구"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:drawableLeftCompat="@drawable/ic_baseline_directions_car_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cardLine" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_list"
            android:layout_marginTop="10dp"
            android:background="@drawable/float_text"
            android:textSize="15sp"
            android:textColor="#00CCFF"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/searchCardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:drawableLeftCompat="@drawable/ic_baseline_list_24" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/kakaoMapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/iconLayer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@id/detailLayer">
            <TextView
                android:id="@+id/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                android:textSize="15sp"
                android:textAlignment="center"
                android:background="@drawable/background_square_radius"
                android:textColor="#000000"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/searchHere"
                app:drawableLeftCompat="@drawable/ic_baseline_filter_alt_24" />
            <ImageView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_square_radius"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_baseline_gps_not_fixed_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/filter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_goneMarginTop="5dp"/>
            <TextView
                android:id="@+id/searchHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_here"
                android:textSize="15sp"
                android:textAlignment="center"
                android:background="@drawable/float_text"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:backgroundTint="#00CCFF"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:drawableLeftCompat="@drawable/ic_baseline_refresh_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailLayer"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="#08B869"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>